--- a/helloCV/helloCV2/helloCV2.vcxproj
+++ b/helloCV/helloCV2/helloCV2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f2cbebeb-e4e8-4f98-b03f-9138cd6e4661}</ProjectGuid>
-    <RootNamespace>helloCV</RootNamespace>
+    <ProjectGuid>{d332b59e-f68a-4b78-96fe-57f41732377e}</ProjectGuid>
+    <RootNamespace>helloCV2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -130,7 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="helloCV.cpp" />
+    <ClCompile Include="helloCV2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
