10-4,5컬러영상처리 7-1,2필터링 5-1,2 영상의밝기와명암비조절

--- a/helloCV/helloCV2/helloCV2.vcxproj
+++ b/helloCV/helloCV2/helloCV2.vcxproj
@@ -130,7 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="helloCV2.cpp" />
+    <ClCompile Include="helloCV.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
