--- a/helloCV/helloCV2/helloCV2.vcxproj.filters
+++ b/helloCV/helloCV2/helloCV2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="helloCV2.cpp">
+    <ClCompile Include="helloCV.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
